<resources>
    <string name="app_name">Hotel</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>

    <string name="msg_correo">Campo para ingresar su correo</string>
    <string name="msg_clave">Campo para ingresar su contraseña</string>
    <string name="msg_btLogin">Boton para hacer login al App</string>
    <string name="msg_btRegister">Boton para registrarse al App</string>

    <string name="msg_fallo_registro">Fallo el registro del usuario</string>
    <string name="msg_fallo_login">Fallo el login del usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_hotel">Hotel</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre_add">Nombre del Huesped</string>
    <string name="msg_apellido_add">Apellido del Huesped</string>
    <string name="msg_cedula_add">Cedula del Huesped</string>
    <string name="msg_numeroHabitacion_add">Numero de Habitación del Huesped</string>
    <string name="bt_add_hotel">Agregar Huesped</string>
    <string name="msg_hotel_add">Agregar Huesped</string>
</resources>